--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,14 +28,23 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp"
         tools:listitem="@layout/data_item"/>
+    <Spinner
+        android:id="@+id/my_count_spinner"
+        app:layout_constraintBottom_toBottomOf="@id/refresh_button"
+        app:layout_constraintTop_toTopOf="@id/refresh_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/refresh_button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:padding="16dp"/>
     <Button
         android:id="@+id/refresh_button"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:padding="16dp"
         android:text="Refresh"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintLeft_toRightOf="@id/my_count_spinner"
+        app:layout_constraintRight_toRightOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
