--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <TextView
+        android:id="@+id/reload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="invisible"
+        android:text="Ooops! Something went wrong please try again later"
+        android:textColor="@color/fb_red" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/giphy_recycler"
@@ -34,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:padding="16dp"
-        android:text="Refresh"
+        android:text="@string/main_refresh"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/my_count_spinner"
         app:layout_constraintRight_toRightOf="parent"/>
