--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:visibility="invisible"
-        android:text="Ooops! Something went wrong please try again later"
+        android:text="@string/try_again_later"
         android:textColor="@color/fb_red" />
 
     <androidx.recyclerview.widget.RecyclerView
